@@ -2,7 +2,7 @@ Source: inkscape
 Section: graphics
 Priority: optional
 Maintainer: Nathan Hurst (njh) <njh@mail.csse.monash.edu.au>
-Build-Depends: debhelper (>= 4.0.0), intltool, libart-2.0-dev (>= 2.3.10), libgc-dev (>= 1:6.5-1), libglib2.0-dev, libgnomevfs2-dev, libgtk2.0-dev (>= 2.0.6-1), libglibmm-2.4-dev (>> 2.6.1-1), libgtkmm-2.4-dev (>> 2.4.11-2), libgtkspell-dev (>= 2.0.10-3), libpango1.0-dev, libpng12-dev, libpopt-dev, libsigc++-2.0-dev (>= 2.0.10-3), libtool, libxml-parser-perl, libxml2-dev (>= 2.6.0), libxslt1-dev, pkg-config, zlib1g-dev, liblcms1-dev
+Build-Depends: debhelper (>= 4.0.0), intltool, libart-2.0-dev (>= 2.3.10), libgc-dev (>= 1:6.5-1), libglib2.0-dev, libgnomevfs2-dev, libgtk2.0-dev (>= 2.0.6-1), libglibmm-2.4-dev (>> 2.6.1-1), libgtkmm-2.4-dev (>> 2.4.11-2), libgtkspell-dev (>= 2.0.10-3), libpango1.0-dev, libpng12-dev, libpopt-dev, libsigc++-2.0-dev (>= 2.0.10-3), libxml-parser-perl, libxml2-dev (>= 2.6.0), libxslt1-dev, pkg-config, zlib1g-dev, liblcms1-dev
 Standards-Version: 3.6.1
 
 Package: inkscape
